--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <script src="script.js"></script>
-  <body></body>
+  <body>
+    <script src="script.js"></script>
+    <ul id="albums"></ul>
+  </body>
 </html>
